# myPyQt

./: .gitignore  .gitignoree  .gitignoree.swp  .project  code.cast  dumb.py  pTree.py  profile.json  pyproject.toml
Configs/: Config.py  QDefaults.py  mappings.py  skel.py
Fnx/: QMake.py  asset_icons.py  debug.py  isTest.py  make.py  tools.py
Microsoft.UI.Xaml.2.7.1.nupkg/: .signature.p7s
Microsoft.UI.Xaml.2.7.1.nupkg/_rels/: .rels
QFrames/: QDictator.py
QLib/: Create.py  QWgt.py  QtLibTree.py  gnr.py  gui.py
QLib/QBases/: QBase.py  QGroup.py  QLayout.py  QModule.py  QWidget.py
QLib/QDialogs/: QSave.py
QLib/QElements/: QApplication.py  QElement.py  QIconButton.py  QIconCheckBox.py  QLabel.py  QLayout.py  QLineEdit.py  QSpacer.py  QTextButton.py  QTextCheckBox.py  QTree.py  QtApplication.py  QtWgt.py
QLib/QFrames/: QDictator.py  QElements.py  QModules.py  profile.json
QLib/QModules/: QEditProp.py  QGui.py  QHArrowsLR.py  QHIncDec.py  QHSearch.py  QHSearchCtl.py  QMain.py  QtApplication.py
QLib/QStatic/: PyQtX.py  QtLibs.py  QtModules.py  skel.py  wget-log
QStatic/: PyQtX.py  QtLibs.py
Qt/: QtLibs.py
assets/: ico.py  icons.conf  svg.py
lib/: Create.py  PyQtX.py  QEditProp.py  QIncDec.py  QSearch.py  QWgt.py  QtApplication.py  QtWgt.py  elements.py  gnr.py  gui.py  iBtn.py  lbl.py  tree.py  wgt.py
lib/QBases/: QGroup.py  QWidget.py
lib/QElements/: QIconButton.py  QIconCheckBox.py  QLabel.py  QLayout.py  QLineEdit.py  QSpacer.py  QSpacer.pyi  QTextButton.py  QTextCheckBox.py  QTree.py  QtWgt.py
static/: QWidget.py  QtLibs.py
(+10 files in other folders)
