[tool.poetry]
name = "myqt"
version = "0.1.0"
description = ""
authors = ["hoefkensj <56705418+hoefkensj@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyqt5 = "^5.15.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
